<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:orientation="horizontal"
    android:weightSum="100">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="50"
        android:orientation="vertical">

        <TextView
            android:id="@+id/wordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:hint="@string/word_adp"
            android:textColor="@color/colkumu"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/propText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:hint="@string/word_prop_adp"
            android:textColor="@color/colkumu"
            android:textStyle="italic"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="50"
        android:orientation="vertical">

        <TextView
            android:id="@+id/meanText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:hint="@string/word_mean_adp"
            android:textColor="@color/colkumu"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/langText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:hint="@string/word_lang_adp"
            android:textColor="@color/colkumu"
            android:textStyle="bold"/>
    </LinearLayout>


</LinearLayout>
